--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "moralis:cloud": "moralis-admin-cli watch-cloud-folder --moralisSubdomain jtvfit8xhyde.usemoralis.com --autoSave 1 --moralisCloudfolder ./cloudFunctions"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@walletconnect/web3-provider": "^1.8.0",
     "@web3auth/web3auth": "^1.1.4",
     "add": "^2.0.6",
     "global": "^4.4.0",
+    "graphql": "^16.6.0",
     "magic-sdk": "^9.0.0",
     "moralis": "^1.5.11",
     "moralis-admin-cli": "^2.1.16",
     "next": "12.1.5",
+    "ra-data-graphql": "^4.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moralis": "^1.3.5",
