--- a/constants/networkMapping.json
+++ b/constants/networkMapping.json
@@ -1,6 +1,6 @@
 {
     "4": {
-        "NftMarketplace": ["0x694cef20aaCbC9fD53d416e51f928Db755c27a03"],
+        "NftMarketplace": ["0x694cef20aaCbC9fD53d416e51f928Db755c27a03", "0x3DF37Daa1e7453f12E10c4dF4dE9a62075E5374d"],
         "BasicNft": ["0x3DF37Daa1e7453f12E10c4dF4dE9a62075E5374d"]
     },
     "31337": { "NftMarketplace": ["0x5FbDB2315678afecb367f032d93F642f64180aa3"] }
