--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moralis": "^1.3.5",
+    "web3": "^1.10.0",
     "web3uikit": "^0.0.133"
   },
   "devDependencies": {
